--- a/dev/index.html
+++ b/dev/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>随毅</title>
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
-</head>
+<link href="scss/main.css" rel="stylesheet"></head>
 <body>
   <div id="root"></div>
-</body>
+<script type="text/javascript" src="js/vendor.js"></script><script type="text/javascript" src="js/0.vendor.js"></script></body>
 </html>
