--- a/dev/index.html
+++ b/dev/index.html
@@ -9,5 +9,5 @@
 <link href="scss/main.css" rel="stylesheet"></head>
 <body>
   <div id="root"></div>
-<script type="text/javascript" src="js/vendor.js"></script><script type="text/javascript" src="js/0.vendor.js"></script></body>
+<script type="text/javascript" src="js/vendor.js"></script><script type="text/javascript" src="js/main.vendor.js"></script></body>
 </html>
