--- a/bfc.html
+++ b/bfc.html
@@ -1,35 +1,92 @@
 <!DOCTYPE html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
     <style>
-      .ss{
-        background:red;
-      }
-      .ss div{
-        float: left;
-        background: green;
-        margin: 10px;
-      }
-      .sss{
-        height: 300px;
-      }
-      .ssss{
-        height: 200px;
-      }
-      .clearfloat:after{display:block;clear:both;content:"";visibility:hidden;height:0}
+        *{
+            margin: 0;
+            padding: 0;
+        }
+        #div1{
+            width: 640px;
+            height: 120px;
+            margin: 100px auto;
+            background-color: #646464;
+            position: relative;
+            overflow: hidden;
+        }
+        #div1 ul{
+            position:absolute;
+            left:0;
+            top:0;
+            overflow: hidden;
+            background-color: #3b7796;
+        }
+
+        #div1 ul li{
+            float: left;
+            width: 160px;
+            height: 120px;
+            list-style: none;
+            padding: 0 -20px;
+        }
     </style>
-  </head>
-  <body>
-    <div class="ss clearfloat">
-        <div class="sss">11</div>
-        <div class="ssss">22</div>
+
+    <script>
+        window.onload = function(){
+            var oDiv = document.getElementById('div1');
+            var oUl = document.getElementById('ul1');
+            var speed = 2;//初始化速度
+
+            oUl.innerHTML += oUl.innerHTML;//图片内容*2-----参考图（2）
+            var oLi= document.getElementsByTagName('li');
+            oUl.style.width = oLi.length*160+'px';//设置ul的宽度使图片可以放下
+
+            var oBtn1 = document.getElementById('btn1');
+            var oBtn2 = document.getElementById('btn2');
+
+
+            function move(){
+                if(oUl.offsetLeft<-(oUl.offsetWidth/2)){//向左滚动，当靠左的图4移出边框时
+                    oUl.style.left = 0;
+                }
+
+                if(oUl.offsetLeft > 0){//向右滚动，当靠右的图1移出边框时
+                    oUl.style.left = -(oUl.offsetWidth/2)+'px';
+                }
+
+                oUl.style.left = oUl.offsetLeft + speed + 'px';
+            }
+
+            oBtn1.addEventListener('click',function(){
+                speed = -2;
+            },false);
+            oBtn2.addEventListener('click',function(){
+                speed = 2;
+            },false);
+
+            var timer = setInterval(move,30);//全局变量 ，保存返回的定时器
+
+            oDiv.addEventListener('mouseout', function () {
+                timer = setInterval(move,30);
+            },false);
+            oDiv.addEventListener('mousemove', function () {
+               clearInterval(timer);//鼠标移入清除定时器
+            },false);
+        }
+    </script>
+</head>
+<body>
+    <input id="btn1" type="button" value="向左">
+    <input id="btn2" type="button" value="向右">
+    <div id="div1">
+
+        <ul id="ul1">
+            <li><img src="./src/assets/login/bg1.png"></li>
+            <li><img src="./src/assets/login/bg2.png"></li>
+            <li><img src="./src/assets/login/bg3.png"></li>
+        </ul>
     </div>
-    
-    <script src="" async defer></script>
-  </body>
+</body>
 </html>
